--- a/semantic.html
+++ b/semantic.html
@@ -42,7 +42,7 @@
     <!-- 푸터 영역 -->
     <footer>
       <div>
-        <ul>
+        <ul style="list-style-type: lower-alpha">
           <li><a href="#">회사 소개</a></li>
           <li><a href="#">개인 정보 처리 방침</a></li>
           <li><a href="#">여행 약관</a></li>
